kubernetes/cluster/extras/jupyter/jupyter.yaml
# Service: Lighttpd
# Ingress: jupyter.brhd.io; jupyter.brhd.io/spark
# Label: app.kubernetes.io/name: jupyter
# TODO:
#    - remove configs for Spark UI: https://jupyter-docker-stacks.readthedocs.io/en/latest/using/specifics.html
---
apiVersion: v1
kind: Service
metadata:
  name: jupyter
  namespace: extras
  labels:
    app.kubernetes.io/name: jupyter
spec:
  type: ClusterIP
  ports:
    - name: http-notebook
      protocol: TCP
      port: 80
      targetPort: 8888
    - name: http-spark
      protocol: TCP
      port: 4040
      targetPort: 4040
  selector:
    app.kubernetes.io/name: jupyter
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter
  namespace: extras
  labels:
    app.kubernetes.io/name: jupyter
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jupyter
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  template:
    metadata:
      namespace: extras
      labels:
        app.kubernetes.io/name: jupyter
    spec:
      restartPolicy: Always
      containers:
        - name: jupyter
          image: jupyter/pyspark-notebook:spark-3.3.0
          resources:
            requests:
              memory: 500M
              cpu: 500m
            limits:
              memory: 1500M
              cpu: 3000m
          command: ["start-notebook.sh"]
          args: ["--ServerApp.token=''"]
          ports:
            - containerPort: 8888
            - containerPort: 4040
          volumeMounts:
            - name: jupyter-home
              mountPath: /home/jovyan
      volumes:
        - name: jupyter-home
          persistentVolumeClaim:
            claimName: jupyter-home
      nodeSelector:
        beta.kubernetes.io/arch: amd64
